objects/CFS_PO_File__c.object
<CustomObject>
    <fields>
        <fullName>Case_End_Date__c</fullName>
        <label>Case End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Start_Date__c</fullName>
        <label>Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Status__c</fullName>
        <label>File Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generated_Date_Time__c</fullName>
        <label>Generated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_By_CFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested By CFS</label>
        <type>Checkbox</type>
    </fields>
    <label>CFS PO File</label>
    <nameField>
        <label>CFS PO File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFS PO Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>